--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>First html program</title>
+    <title>First html program and git</title>
     <style>
       img {
         width: 100px;
@@ -15,7 +15,7 @@
     </style>
   </head>
   <body>
-    <p>this is para tag</p>
+    <p>this is paragrap tag</p>
 
     <img src="unicorn2.jpg" alt="hello!!!" />
     <p class="username">83jayu</p>
