--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         margin-right: 10px;
       }
       p.username {
+        color: red;
         font-weight: bold;
       }
     </style>
@@ -17,7 +18,7 @@
   <body>
     <p>this is paragrap tag</p>
 
-    <img src="unicorn2.jpg" alt="hello!!!" />
+    <img src="unicorn.jpg" alt="Hellounicorn!!!" />
     <p class="username">83jayu</p>
     <p>lets learn HTML!</p>
   </body>
